--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %} Ren Commerce {% endblock %}</title>
+    <title>{% block title %} | Ren Commerce {% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'dist/main.css' %}">
     
@@ -26,11 +26,12 @@
     <!-- Footer -->
 
     <script src="{% static 'src/js/jquery.min.js' %}"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <script src="{% static 'src/js/bootstrap-input-spinner.js' %}"></script> 
     <script src="{% static 'src/scss/vendors/plugin/js/slick.min.js' %}"></script>
     <script src="{% static 'src/scss/vendors/plugin/js/jquery.nice-select.min.js' %}"></script>
     <script src="{% static 'dist/main.js' %}"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script>
         function openNav() {
             document.getElementById("mySidenav").style.width = "350px";
@@ -41,17 +42,18 @@
             document.getElementById("mySidenav").style.width = "0";
             $('#overlayy').removeClass("active");
         }
-
-    {% if messages %}
-    {% for message in messages %}
+    </script>
+    <script>
+        {% if messages %}
+        {% for message in messages %}
             Swal.fire({
                 position: 'top',
                 icon: '{{ message.tags }}',
                 title: '{{ message }}',
                 showConfirmButton: false,
-                timer: 3500
+                //timer: 3500
             })
-    {% endfor %}
-    {% endif %}
+        {% endfor %}
+        {% endif %}
     </script>
 </body>
