--- a/templates/cart/cart_page.html
+++ b/templates/cart/cart_page.html
@@ -56,7 +56,7 @@
                                 <p> {{ product.title }}</p>
                             </div>
                             <div class="button">
-                                <a class="btn bg-primary" href="billing-information.html">Checkout now</a>
+                                <a class="btn bg-primary" href="#">Checkout now</a>
                                 <a class="cart-btn" href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="18"
                                         viewBox="0 0 20 18">
@@ -177,7 +177,7 @@
 
                     </div>
                     <form action="#">
-                        <a href="billing-information.html" class="btn bg-primary" type="submit" style="width: 100%;">Checkout Now</a>
+                        <a href="{% url 'customers:billing_details' %}" class="btn bg-primary" style="width: 100%;">Checkout Now</a>
                     </form>
                 </div>
             </div>
