--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %} | Ren Commerce {% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous"> 
     <link rel="stylesheet" href="{% static 'dist/main.css' %}">
     
 </head>
@@ -27,7 +27,7 @@
 
     <script src="{% static 'src/js/jquery.min.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="{% static 'src/js/bootstrap-input-spinner.js' %}"></script> 
+    {% comment %} <script src="{% static 'src/js/bootstrap-input-spinner.js' %}"></script>  {% endcomment %}
     <script src="{% static 'src/scss/vendors/plugin/js/slick.min.js' %}"></script>
     <script src="{% static 'src/scss/vendors/plugin/js/jquery.nice-select.min.js' %}"></script>
     <script src="{% static 'dist/main.js' %}"></script>
@@ -42,6 +42,12 @@
             document.getElementById("mySidenav").style.width = "0";
             $('#overlayy').removeClass("active");
         }
+    </script>
+    <script src="https://unpkg.com/htmx.org@1.1.0"></script>
+    <script>
+        document.body.addEventListener('htmx:configRequest', (event) => {
+          event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+        })
     </script>
     <script>
         {% if messages %}
