--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -95,28 +95,31 @@
                             </ul>
                         </li>
                     </ul>
-                    <div class="search-bar">
-                        {% if not no_search %}
-                        <input type="text" placeholder="Search for product...">
-                        <div class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20.414" height="20.414"
-                                viewBox="0 0 20.414 20.414">
-                                <g id="Search_Icon" data-name="Search Icon" transform="translate(1 1)">
-                                    <ellipse id="Ellipse_1" data-name="Ellipse 1" cx="8.158" cy="8" rx="8.158"
-                                        ry="8" fill="none" stroke="#1a2224" stroke-linecap="round"
-                                        stroke-linejoin="round" stroke-width="2" />
-                                    <line id="Line_4" data-name="Line 4" x1="3.569" y1="3.5"
-                                        transform="translate(14.431 14.5)" fill="none" stroke="#1a2224"
-                                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
-                                </g>
-                            </svg>
+                    <form method='get' action="{% url 'shop:shop_home' %}">
+                        <div class="search-bar">
+                            {% if not no_search %}
+                                <input type="text" name='title' id='d_title' placeholder="Search for product...">
+                                <div class="icon" type='submit'>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20.414" height="20.414"
+                                        viewBox="0 0 20.414 20.414">
+                                        <g id="Search_Icon" data-name="Search Icon" transform="translate(1 1)">
+                                            <ellipse id="Ellipse_1" data-name="Ellipse 1" cx="8.158" cy="8" rx="8.158"
+                                                ry="8" fill="none" stroke="#1a2224" stroke-linecap="round"
+                                                stroke-linejoin="round" stroke-width="2" />
+                                            <line id="Line_4" data-name="Line 4" x1="3.569" y1="3.5"
+                                                transform="translate(14.431 14.5)" fill="none" stroke="#1a2224"
+                                                stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        </g>
+                                    </svg>
+                                </div>
+                            
+                            {% endif %}
                         </div>
-                        {% endif %}
-                    </div>
+                    </form>
                     <div class="menu-icon ml-auto">
                         <ul>
                             <li>
-                                <a href="wishlist.html">
+                                <a href="{% url 'customers:wishlist' %}">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="22" height="20"
                                         viewBox="0 0 22 20">
                                         <g id="Heart" transform="translate(1 1)">
@@ -126,7 +129,7 @@
                                                 stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
                                         </g>
                                     </svg>
-                                    <span class="heart">3</span>
+                                    <span class="heart">{{ wishlist_num}}</span>
                                 </a>
                             </li>
                             <li>
