--- a/templates/cart/cart_page.html
+++ b/templates/cart/cart_page.html
@@ -177,7 +177,7 @@
 
                     </div>
                     <form action="#">
-                        <a href="{% url 'customers:billing_details' %}" class="btn bg-primary" style="width: 100%;">Checkout Now</a>
+                        <a href="{% url 'payment:add-address' %}" class="btn bg-primary" style="width: 100%;">Checkout Now</a>
                     </form>
                 </div>
             </div>
